<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/mainMenuGroup">
        <item
            android:id="@+id/scoreboardFragment"
            android:icon="@drawable/mdi_scoreboard_outline"
            android:title="@string/score_board" />
        <item
            android:id="@+id/teamsFragment"
            android:icon="@drawable/ic_jersey"
            android:title="@string/teams" />
        <item
            android:id="@+id/standingsFragment"
            android:icon="@drawable/ic_baseline_outlined_flag_24"
            android:title="@string/standings" />
        <item
            android:id="@+id/playersFragment"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/player" />
        <item
            android:id="@+id/leadersFragment"
            android:icon="@drawable/ic_baseline_analytics_24"
            android:title="@string/leader" />
    </group>
    <group android:id="@+id/settingMenuGroup">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/about" />
    </group>
</menu>