<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scoreboardFragment">

    <action
        android:id="@+id/actionGoToTeam"
        app:destination="@id/singleTeamFragment">
        <argument
            android:name="teamId"
            app:argType="string" />
        <argument
            android:name="teamName"
            app:argType="string" />
    </action>

    <action
        android:id="@+id/actionGoToPlayer"
        app:destination="@id/singlePlayerFragment">
        <argument
            android:name="playerId"
            app:argType="string" />
        <argument
            android:name="playerName"
            app:argType="string" />
    </action>

    <action
        android:id="@+id/actionGoToTeamRoster"
        app:destination="@id/playersFragment">
        <argument
            android:name="teamId"
            app:argType="string" />
    </action>

    <fragment
        android:id="@+id/leadersFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.leaders.LeadersFragment"
        android:label="@string/leader"
        tools:layout="@layout/fragment_leaders" />

    <fragment
        android:id="@+id/playersFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.players.PlayersFragment"
        android:label="@string/player"
        tools:layout="@layout/fragment_players">

        <argument
            android:name="teamId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/standingsFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.standings.StandingsFragment"
        android:label="@string/standings"
        tools:layout="@layout/fragment_standings" />

    <fragment
        android:id="@+id/scoreboardFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.scoreboard.ScoreBoardFragment"
        android:label="@string/score_board"
        tools:layout="@layout/fragment_score_board" />
    <fragment
        android:id="@+id/teamsFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.teams.TeamsFragment"
        android:label="@string/teams"
        tools:layout="@layout/team_grid_item" />

    <fragment
        android:id="@+id/singlePlayerFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.players.SinglePlayerFragment"
        android:label="{playerName}"
        tools:layout="@layout/fragment_single_player">
        <argument
            android:name="playerId"
            app:argType="string" />
        <argument
            android:name="playerName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.setting.SettingFragment"
        android:label="@string/setting" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/singleTeamFragment"
        android:name="dev.binhjdev.androidbasketballleague.ui.teams.SingleTeamFragment"
        android:label="{teamName}"
        tools:layout="@layout/fragment_single_team">
        <argument
            android:name="teamId"
            app:argType="string" />
        <argument
            android:name="teamName"
            app:argType="string" />
    </fragment>
</navigation>